added json for projects

--- a/src/projects.json
+++ b/src/projects.json
@@ -1,3 +1,38 @@
 [
-    
+    {
+        "id": 1,
+        "name": "",
+        "image": "",
+        "github": "",
+        "url": "",
+        "description": "",
+        "languages":
+    },
+    {
+        "id": 2,
+        "name": "",
+        "image": "",
+        "github": "",
+        "url": "",
+        "description": "",
+        "languages":
+    },
+    {
+        "id": 3,
+        "name": "",
+        "image": "",
+        "github": "",
+        "url": "",
+        "description": "",
+        "languages":
+    },
+    {
+        "id": 4,
+        "name": "",
+        "image": "",
+        "github": "",
+        "url": "",
+        "description": "",
+        "languages":
+    },
 ]
