--- a/src/projects.json
+++ b/src/projects.json
@@ -1,38 +1,38 @@
 [
     {
         "id": 1,
-        "name": "",
-        "image": "",
-        "github": "",
-        "url": "",
-        "description": "",
-        "languages":
+        "name": "Anime4You",
+        "image": "https://diegorivera1110.github.io/Portfolio-2.0/assets/images/Anime4You.PNG",
+        "github": "https://github.com/Diegorivera1110/anime4you",
+        "url": "https://diegorivera1110.github.io/anime4you/",
+        "description": "This was a collaborative project that myself and two other classmates worked on from my Coding Bootcamp. The site we developed uses two API's that allows the clien side to search any anime and get a brief description as well as recommendations to similar shows to the one they searched.",
+        "languages": "JavaScript | HTML | CSS | jQuery | Materialize"
     },
     {
         "id": 2,
-        "name": "",
-        "image": "",
-        "github": "",
-        "url": "",
-        "description": "",
-        "languages":
+        "name": "Team Profile Generator",
+        "image": "https://diegorivera1110.github.io/Portfolio-2.0/assets/images/team-generator.png",
+        "github": "https://github.com/Diegorivera1110/Team-Profile-Generator",
+        "url": "N/A",
+        "description": "This project was created to use inquirer in the command prompt when running 'node index.js' to generate a Software Development team by answering a set of questions defining each employee. I also used Jest to test each class that is able to be added to the team starting with the Manager and including Interns and Engineers.",
+        "languages": "JavaScript | Node.js | CSS | Bootstrap"
     },
     {
         "id": 3,
-        "name": "",
-        "image": "",
-        "github": "",
-        "url": "",
-        "description": "",
-        "languages":
+        "name": "Password Generator",
+        "image": "https://diegorivera1110.github.io/Portfolio-2.0/assets/images/password-generator.png",
+        "github": "https://github.com/Diegorivera1110/password-generator",
+        "url": "https://diegorivera1110.github.io/password-generator/",
+        "description": "I developed this project to generate random passwords that also gives the user to choose criteria fot their password such as if they want to or don't want to include uppercase or lowercase letters and if they want to inlcude numbers or special characters.",
+        "languages": "JavaScript | HTML | CSS"
     },
     {
         "id": 4,
-        "name": "",
-        "image": "",
-        "github": "",
-        "url": "",
-        "description": "",
-        "languages":
-    },
+        "name": "Budget Tracker",
+        "image": "https://diegorivera1110.github.io/Portfolio-2.0/assets/images/budget-tracker.PNG",
+        "github": "https://github.com/Diegorivera1110/Budget-Tracker",
+        "url": "https://mysterious-cliffs-98641.herokuapp.com/",
+        "description": "This project was provided to add offline fucntionality and access to an already functional budget tracker. This task was completed by using IndexdDB for the offline functionality as well as a service worker to handle network requests from the client. The Budget Tracker is able to track withdrawls and deposits with or without an internet connection.",
+        "languages": "NoSQL | IndexedDB | Mongoose | JavaScript"
+    }
 ]
