added group project 3

--- a/src/projects.json
+++ b/src/projects.json
@@ -10,6 +10,15 @@
     },
     {
         "id": 2,
+        "name": "Tutor Coin",
+        "image": "https://raw.githubusercontent.com/mpeterson56/Tutor-Coin/main/create.png",
+        "github": "https://github.com/mpeterson56/Tutor-Coin/tree/main",
+        "url": "https://tutor-coin.herokuapp.com/",
+        "description": "Description Pending",
+        "languages": "MongoDB | HTML/CSS | JavaScript | GraphQL | Express.js | React | Node.js | JWT | Materialize"
+    },
+    {
+        "id": 3,
         "name": "Team Profile Generator",
         "image": "https://diegorivera1110.github.io/Portfolio-2.0/assets/images/team-generator.png",
         "github": "https://github.com/Diegorivera1110/Team-Profile-Generator",
@@ -18,7 +27,7 @@
         "languages": "JavaScript | Node.js | CSS | Bootstrap"
     },
     {
-        "id": 3,
+        "id": 4,
         "name": "Password Generator",
         "image": "https://diegorivera1110.github.io/Portfolio-2.0/assets/images/password-generator.png",
         "github": "https://github.com/Diegorivera1110/password-generator",
@@ -27,7 +36,7 @@
         "languages": "JavaScript | HTML | CSS"
     },
     {
-        "id": 4,
+        "id": 5,
         "name": "Budget Tracker",
         "image": "https://diegorivera1110.github.io/Portfolio-2.0/assets/images/budget-tracker.PNG",
         "github": "https://github.com/Diegorivera1110/Budget-Tracker",
